# SMC360

./: LICENSE  README.md  pyproject.toml  setup.py
smc360/: __init__.py  cli.py  lib.py
smc360/explorer/: app.py
smc360/services/database/: postgresql.py  snowflake.py
test/: test_cli.py  test_instagram.py  test_postgresql.py  test_s3.py  test_snowflake.py
